--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 :root {
   --text: #333333;
   --text-h: #000000;
